--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Cart</title>
-        <link rel='stylesheet' href="CSS/cart.css" >
+        <link rel='stylesheet' href="/cart.css" >
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
