--- a/consultation.html
+++ b/consultation.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Initial Consultation</title>
-        <link rel='stylesheet' href="CSS/consultation.css">
+        <link rel='stylesheet' href="/consultation.css">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
