--- a/fitnesssess.html
+++ b/fitnesssess.html
@@ -3,7 +3,7 @@
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fitness Individual Training Session</title>
-        <link rel='stylesheet' href="CSS/fitnesssess.css">
+        <link rel='stylesheet' href="/fitnesssess.css">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
