--- a/group.html
+++ b/group.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>10 Group Classes</title>
-        <link rel='stylesheet' href="CSS/group.css">
+        <link rel='stylesheet' href="/group.css">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
