--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>resnick_assignment2</title>
-        <link rel='stylesheet' href="css/default.css" > 
+        <link rel='stylesheet' href="/default.css" > 
         <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     <body>
