--- a/personal.html
+++ b/personal.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Session</title>
-        <link rel='stylesheet' href="CSS/personal.css" >
+        <link rel='stylesheet' href="/personal.css" >
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
