--- a/tentraining.html
+++ b/tentraining.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>10 Training Sessions</title>
-        <link rel='stylesheet' href="CSS/tentraining.css">
+        <link rel='stylesheet' href="/tentraining.css">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
