--- a/twotraining.html
+++ b/twotraining.html
@@ -3,7 +3,7 @@
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>20 Training Sessions</title>
-        <link rel='stylesheet' href="CSS/twotraining.css">
+        <link rel='stylesheet' href="/twotraining.css">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     
