--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>About</title>
-        <link rel='stylesheet' href="/about.css" > 
+        <link rel='stylesheet' href="./about.css" > 
         <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" rel="stylesheet"/>
     </head>
     <body>
